# fortran-mpi-examples

./: CMakeLists.txt  CMakePresets.json  README.md  meson.build
.github/workflows/: cmake-gfortran.yml  cmake-intel-oneapi.yml  cmake.yml  intel-oneapi-windows.yml  intel-oneapi.yml  meson-gfortran.yml  meson-intel-oneapi.yml  meson.yml  oneapi-linux.yml  unix-cmake.yml  windows-cmake.yml
cmake/: compilers.cmake  mpi.cmake  print_target_props.cmake
cmake/Modules/: FindCoarray.cmake  FindMPI.cmake
cmake/Modules/mpi/: FindMPI.cmake
coarray/: CMakeLists.txt  README.md  helloworld.f90  meson.build  pi.f90
dev/: unit.cmake
mpi/: CMakeLists.txt  helloworld.f90  thread_pass.f90
src/: CMakeLists.txt  basic.c  basic.f90  thread_pass.f90
test/: CMakeLists.txt  basic.f90  helloworld.f90  meson.build  mpivers.f90  thread_pass.f90
